package com.vanskarner.cleanmovie.ui;

public interface BasePresenter {

    void asyncCancel();

}